feat: Add webpack to project and reorder directory
Webpack will be used to transpile code and minify before deployment.

api directory was removed and now we store index.ts within the base directory. All other methods will be within src.

--- a/template.yaml
+++ b/template.yaml
@@ -10,7 +10,7 @@ Resources:
   SampleFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: ../dist/
+      CodeUri: ./build/
       Handler: index.handler
       Runtime: nodejs8.10
       Events:
