--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "author": "João Fernando Corsini",
   "license": "ISC",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.27",
+    "@types/node": "^12.0.8",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
-    "@types/aws-lambda": "^8.10.27",
     "eslint": "^5.16.0",
     "standard": "^12.0.1",
-    "typescript": "^3.5.2"
+    "ts-loader": "^6.0.3",
+    "typescript": "^3.5.2",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
   },
   "scripts": {
     "standard": "standard",
