chore: Switch from standard to eslint
Due to some issue with linting typescript, I decided to go all in with eslint. Building is working as expected.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,14 @@
     ],
     "types": [
       "node",
+      "aws-lambda",
     ],
     "esModuleInterop": true,
     "inlineSourceMap": true,
     "resolveJsonModule": true
   },
   "include": [
-    "./src/**/*.ts"
+    "./index.ts"
   ],
   "outDir": "build",
 }
