--- a/package.json
+++ b/package.json
@@ -7,24 +7,23 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.27",
-    "@types/node": "^12.0.8",
-    "@typescript-eslint/eslint-plugin": "^1.10.2",
-    "@typescript-eslint/parser": "^1.10.2",
+    "@types/node": "^12.0.10",
+    "@types/webpack": "^4.4.34",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
     "eslint": "^5.16.0",
-    "standard": "^12.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "prettier": "^1.18.2",
     "ts-loader": "^6.0.3",
+    "ts-node": "^8.3.0",
     "typescript": "^3.5.2",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4"
   },
   "scripts": {
-    "standard": "standard",
-    "build:watch": "tsc --watch"
-  },
-  "standard": {
-    "parser": "@typescript-eslint/parser",
-    "plugins": [
-      "@typescript-eslint/eslint-plugin"
-    ]
+    "build:watch": "tsc --watch",
+    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts}' --quiet --fix"
   }
 }
