--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "resolveJsonModule": true
   },
   "include": [
-    "./index.ts"
+    "./index.ts",
+    "./auth.ts"
   ],
   "outDir": "build",
 }
